--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 <ul>
-    <div *ngFor='let profile of profiles'>
+    <div *ngFor='let profile of profile'>
         <li >{{profile.form}}</li> 
         <!-- <app-profile-details [profile]='profile'></app-profile-details> -->
     </div>
