--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,6 +4,6 @@
 <ul>
     <div *ngFor='let profile of profile'>
         <li >{{profile.form}}</li> 
-        <!-- <app-profile-details [profile]='profile'></app-profile-details> -->
+        <app-profile-details [profile]='profile'></app-profile-details>
     </div>
 </ul>
