--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<app-profile></app-profile>
+
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="topnav">
+<!-- <div class="topnav">
     <a class="active" href="#home">GitHub</a>
     <a href="#about">ABOUT</a>
     <a href="#contact">HOME</a>
@@ -9,4 +11,4 @@
         <button type="search">Search</button>
       </form>
     </div>
-  </div>
+  </div> -->
