--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files
 * {box-sizing: border-box;}
 
 /* Style the navbar */
-.topnav {
+/* .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
-}
+} */
 
 /* Navbar links */
-.topnav a {
+/* .topnav a {
   float: left;
   display: block;
   color: black;
@@ -16,35 +16,35 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
+} */
 
 /* Navbar links on mouse-over */
-.topnav a:hover {
+/* .topnav a:hover {
   background-color: #ddd;
   color: black;
-}
+} */
 
 /* Active/current link */
-.topnav a.active {
+/* .topnav a.active {
   background-color: #2196F3;
   color: white;
-}
+} */
 
 /* Style the input container */
-.topnav .search-container {
+/* .topnav .search-container {
   float: right;
-}
+} */
 
 /* Style the input field inside the navbar */
-.topnav input[type=text] {
+/* .topnav input[type=text] {
   padding: 6px;
   margin-top: 8px;
   font-size: 17px;
   border: none;
-}
+} */
 
 /* Style the button inside the input container */
-.topnav .search-container button {
+/* .topnav .search-container button {
   float: right;
   padding: 6px;
   margin-top: 8px;
@@ -57,10 +57,10 @@
 
 .topnav .search-container button:hover {
   background: #ccc;
-}
+} */
 
 /* Add responsiveness - On small screens, display the navbar vertically instead of horizontally */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
   }
@@ -75,4 +75,4 @@
   .topnav input[type=text] {
     border: 1px solid #ccc; 
   }
-}
+}  */
