--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<div class="container">
 <app-profile></app-profile>
-
+</div>
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <div class="topnav">
     <a class="active" href="#home">GitHub</a>
